# aemodes

./: .gitignore  README.md  pyproject.toml  test.py
.archive/: early_fusion.py  early_fusion_finetune.ipynb
.archive/rcn/: rcn_co2.ipynb  rcn_functions.py
commands/: aemodes.sh  train_co2.sh
data/: view_data.ipynb
scripts/: ae_normalization.py  export_model.py  improve_dataset.ipynb  improve_dataset.py  improve_dataset.sh  inference.ipynb  remake_signal.ipynb  train_mask_rcnn.sh  train_yolo.sh  view_data.ipynb  view_pickle.ipynb
src/aemodes/: __main__.py  main.py
src/aemodes/config/: README.md  default.yaml
src/aemodes/config/model/: baseline.yaml  seldnet.yaml
src/aemodes/models/: ast.py  baseline.py  formant.py  models.py  seldnet.py
src/aemodes/models/detection/: baseline.py  seldnet.py
src/aemodes/models/nn/: loss.py
src/aemodes/nn/: loss.py
src/aemodes/scripts/: evaluate.py  inference.py  train.py
src/aemodes/utils/: __init__.py  dataset.py  earlystopping.py
