[project]
name = "aemodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pathlib>=1.0.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.1",
]

[tool.uv]
package = true
