[project]
name = "aemodes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip-system-certs",

    "ipykernel",
    "ipywidgets",

    "lightning[extra]",

    "matplotlib",
    "seaborn",
    "numpy",

    "pathlib",
    "tifffile",
    "pycocotools",

    "torch",
    "torchmetrics",
    "torchinfo",
    "torchvision",

    "ultralytics",
    "scipy",
    "scikit-image",

    "tokeye",
]

[tool.uv]
package = true

[tool.uv.sources]
tokeye = { path = "../tokeye" }
